<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rectangel_white"
    android:backgroundTint="@color/layout_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:ignore="UnusedAttribute">

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:tint="@color/purple_700"
    android:id="@+id/closePannel3"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="10dp"
    app:layout_constraintRight_toRightOf="parent"
    android:src="@drawable/baseline_clear_24"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="5dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/please_specify_the_difficulty_you_are_facing"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="16sp"
        android:textStyle="bold" />

      <com.google.android.material.chip.ChipGroup
          android:layout_width="wrap_content"
          app:singleLine="false"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintTop_toBottomOf="@id/textView"
          android:id="@+id/chipGroup"
          android:layout_height="wrap_content">
<com.google.android.material.chip.Chip
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
   android:id="@+id/poorInfo"

    android:textColor="@color/white"
   style="@style/CustomChipStyle"

    android:text="@string/poor_information"
    />
          <com.google.android.material.chip.Chip
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@color/white"
                style="@style/CustomChipStyle"
              android:id="@+id/ads"
              android:text="@string/ads"


              />
          <com.google.android.material.chip.Chip
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/others"
              android:textColor="@color/white"
              android:id="@+id/others"
              style="@style/CustomChipStyle"
              />
      </com.google.android.material.chip.ChipGroup>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="4dp"
    android:backgroundTint="#D9D9D9"
    android:padding="5dp"
      app:layout_constraintTop_toBottomOf="@id/chipGroup"
    android:background="@drawable/rectangel_white"
    android:orientation="vertical">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="14sp"
        android:id="@+id/tv"
        android:text="@string/help_us_locate_and_solve_your_problem_more_quicky_please_provide_us_with_detailed"/>



        <EditText
            android:layout_width="match_parent"
            android:gravity="start"
            android:padding="5dp"
            android:lines="7"
            android:inputType="textMultiLine|text"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toBottomOf="@id/tv"
            android:id="@+id/feeBacktext"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/l1"
            android:hint="@string/tap_here_to_enter_text"
            android:background="@null"

            android:textAlignment="textStart"
            android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/l1"
        app:layout_constraintTop_toBottomOf="@id/feeBacktext"
        app:layout_constraintBottom_toTopOf="@id/submit"
        >
        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dynamicChipGroup"
            android:padding="5dp"

            app:singleSelection="true"
            >
        </com.google.android.material.chip.ChipGroup>

        <LinearLayout
            android:id="@+id/attachFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginStart="5dp"
            android:background="#632196F3"
            android:padding="4dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_add_24"
                />
        </LinearLayout>
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"

        android:backgroundTint="@color/purple_700"
        android:text="@string/submit"
        android:id="@+id/submit"
        android:background="@drawable/rectangel_white"/>



</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>